--- a/front/organizer-front/src/app/contacts/contact-page/contact-page.component.html
+++ b/front/organizer-front/src/app/contacts/contact-page/contact-page.component.html
@@ -18,7 +18,7 @@
             <hr class="separator-perimeter">
             <div *ngFor="let perimeter of (contact$ | async)?.perimeters">
                 <div class="perimeter-line">
-                    <span>{{perimeter.content}}</span>
+                    <span (click)="toPerimeter(perimeter)">{{perimeter.content}}</span>
                     <div class="action-button" (click)="deletePerimeter(perimeter.id)"> 
                         <i class="fa fa-trash"></i>
                     </div>
