--- a/front/organizer-front/src/app/landing-page/landing-page.component.html
+++ b/front/organizer-front/src/app/landing-page/landing-page.component.html
@@ -4,7 +4,7 @@
 		<div class="button" (click)="toContactsPage()">
 			<span>Contacts</span>
 		</div>
-		<div class="button" routerLink="files">
+		<div class="button" (click)="toFilesPage()">
 			<span>Fichiers</span>
 		</div>
 	</div>
