--- a/front/organizer-front/src/app/tags/tags-list/tags-list.component.scss
+++ b/front/organizer-front/src/app/tags/tags-list/tags-list.component.scss
@@ -6,7 +6,7 @@
     top:0;
     width: 100%;
     height:calc(100vh - 65px);
-    background-color: ref.$base-color;
+    // background-color: ref.$base-color;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
