--- a/front/organizer-front/src/styles.scss
+++ b/front/organizer-front/src/styles.scss
@@ -5,11 +5,11 @@
 body {
     margin: 0;
     padding: 0;
-    // background-color: ref.$base-color;
-    background-image: url("./assets/images/bg.jpg");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: ref.$base-color;
+    // background-image: url("./assets/images/bg.jpg");
+    // background-size: cover;
+    // background-position: center;
+    // background-attachment: fixed;
     
     
     
