--- a/front/organizer-front/src/app/files/file-page/file-page.component.scss
+++ b/front/organizer-front/src/app/files/file-page/file-page.component.scss
@@ -111,7 +111,7 @@
         align-items: center;
         gap: 20px;
         span{
-            
+            cursor: pointer;
             min-width: fit-content;
         } 
     
